# algo-code

./: .gitignore  CMakeLists.txt  CMakeSettings.json
0_Basics/: CMakeLists.txt  P3213_asurkis_2314.cxx
1_IntroductionToAlgorithms/: P3213_asurkis_1005.cxx  P3213_asurkis_1155.cxx  P3213_asurkis_1296.cxx  P3213_asurkis_1401.cxx  P3213_asurkis_2025.cxx
2_Sorting/: CMakeLists.txt  P3213_asurkis_1207.cxx  P3213_asurkis_1322.cxx  P3213_asurkis_1444.cxx  P3213_asurkis_1604.cxx  P3213_asurkis_1726.cxx
3_DataStructures/: CMakeLists.txt  P3213_asurkis_1067.cxx  P3213_asurkis_1494.cxx  P3213_asurkis_1521.cxx  P3213_asurkis_1628.cxx  P3213_asurkis_1650.cxx
4_GraphAlgorithms/: CMakeLists.txt  P3213_asurkis_1080.cxx  P3213_asurkis_1160  P3213_asurkis_1160.cxx  P3213_asurkis_1162.cxx  P3213_asurkis_1450.cxx  P3213_asurkis_1806  P3213_asurkis_1806.cxx
IntroductionToAlgorithms/: CMakeLists.txt  P3213_asurkis_1005.cxx  P3213_asurkis_1155.cxx  P3213_asurkis_2025.cxx
Template/: CMakeLists.txt
