cmake_minimum_required (VERSION 3.8)
add_executable (2287 P3213_asurkis_2287.cxx)
add_executable (2288 P3213_asurkis_2288.cxx)
add_executable (2289 P3213_asurkis_2289.cxx)
add_executable (2290 P3213_asurkis_2290.cxx)
add_executable (2291 P3213_asurkis_2291.cxx)
add_executable (2300 P3213_asurkis_2300.cxx)
add_executable (2301 P3213_asurkis_2301.cxx)
add_executable (2302 P3213_asurkis_2302.cxx)
add_executable (2303 P3213_asurkis_2303.cxx)
add_executable (2314 P3213_asurkis_2314.cxx)
add_executable (2328 P3213_asurkis_2328.cxx)
add_executable (2329 P3213_asurkis_2329.cxx)